--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.23",
